--- a/css/style.css
+++ b/css/style.css
@@ -39,3 +39,9 @@ dt strong {
     font-style: italic;
     color: gray
 }
+
+.label {
+    font-weight: bold;
+    font-variant: small-caps;
+    font-style: normal;
+}
